second commit - index page

--- a/css/reboot.css
+++ b/css/reboot.css
@@ -2,8 +2,19 @@
     margin: 0;
     padding: 0;
     direction: rtl;
+    font-family: IranSans;
 }
 @font-face {
-    font-family: 'BLotus', SansSerif;
-    src: url("fonts/BLotus.ttf");
+    font-family: IranSans;
+    src: url("fonts/eot/IRANSansWeb.eot");
+    src: url("fonts/ttf/IRANSansWeb.ttf");
+    src: url("fonts/woff/IRANSansWeb.woff");
+    src: url("fonts/woff2/IRANSansWeb.woff2");
+}
+@font-face {
+    font-family: IranSansBold;
+    src: url("fonts/eot/IRANSansWeb_Bold.eot");
+    src: url("fonts/ttf/IRANSansWeb_Bold.ttf");
+    src: url("fonts/woff/IRANSansWeb_Bold.woff");
+    src: url("fonts/woff2/IRANSansWeb_Bold.woff2");
 }
