--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,39 @@
 @import "reboot.css";
 
-body {
+.wrapper{
+    width: 100%;
+    height: 800px;
+    background: linear-gradient(to left, rgba(50,50,50,0.2), rgba(50,50,50,0.2)),url("../images/BackgroundCover.jpg")
+    no-repeat center center fixed;
     background-size: cover;
-    background-repeat: no-repeat;
-    background-image: url("../images/Lot-of-books-in-library_1920x1440.jpg");
+    direction: ltr;
 }
-
-.wrapper {
-    margin-top: 250px;
-    text-align: center;
-}
-
-.wrapper h1:nth-child(1) {
-    font-size: 50px;
-    color: whitesmoke;
-}
-.wrapper>.buttons{
-    margin-top: 100px;
-}
-.wrapper>.buttons>a {
+.wrapper h1:nth-child(1){
+    font-family: IranSansBold;
+    font-size: 60px;
+    direction: ltr;
+    padding-top: 120px;
+    padding-left: 350px;
     display: block;
-    font-size: 30px;
-    color: black;
+    box-sizing: border-box;
+    margin-bottom: 150px;
+}
+.wrapper a{
+    display: block;
+    width: 300px;
+    height: 50px;
+    border: 1px solid #2d2eff;
+    border-radius: 7px;
     text-decoration: none;
-    width: 220px;
-    height: 45px;
-    background-color: rgba(245, 245, 245, 0.5);
-    border-radius: 10px;
-    margin-top: 10px;
-    margin-right: auto;
-    margin-left: auto;
+    text-align: center;
+    margin-left: 170px;
+    margin-bottom: 7px;
+    padding-top: 10px;
+    box-sizing: border-box;
+    color: black;
+    transition: all 0.1s ease-in;
+}
+.wrapper a:hover{
+    background-color: #2d2eff;
+    color: whitesmoke;
 }
