--- a/css/customerMainPageCss.css
+++ b/css/customerMainPageCss.css
@@ -19,11 +19,12 @@
     height: inherit;
 }
 
-.wrapper section:nth-child(1) nav:nth-child(1) ul:nth-child(1) li {
+.wrapper > section:nth-child(1) > nav:nth-child(1) > ul:nth-child(1) > li {
     display: inline-block;
     width: 150px;
     height: inherit;
     text-align: center;
+    vertical-align: top;
 }
 
 .wrapper section:nth-child(1) nav:nth-child(1) ul:nth-child(1) li a {
@@ -43,27 +44,86 @@
     color: whitesmoke;
 }
 
-.wrapper section:nth-child(1) nav:nth-child(1) ul:nth-child(1) li:nth-child(5) {
+.wrapper > section:nth-child(1) > nav:nth-child(1) > ul:nth-child(1) > li:nth-child(5) {
     width: 40%;
     height: inherit;
-    direction: ltr;
+    padding-top: 10px;
+    box-sizing: border-box;
     text-align: left;
 }
 
 .wrapper section:nth-child(1) nav:nth-child(1) ul:nth-child(1) li:nth-child(5) form:nth-child(1) input:nth-child(2) {
     width: 220px;
     padding: 5px;
+    box-sizing: border-box;
     text-align: center;
     direction: rtl;
+    outline-color: #2d2eff;
+    transition: all 0.1s ease;
 }
 
 .wrapper section nav ul li form i {
     position: absolute;
 }
 
-.icon {
-    padding: 6px;
+.wrapper section nav ul li form i.icon {
+    padding: 7px;
     color: #551A8B;
+    transition: all 0.3s ease-in;
+}
+
+.wrapper > section > nav > ul > li:nth-child(6) {
+    width: 90px !important;
+    direction: ltr;
+    margin-right: 40px;
+}
+
+.wrapper section nav ul li:nth-child(6) i.icon {
+    display: block;
+    font-size: 25px;
+    padding-top: 11px;
+    box-sizing: border-box;
+    width: 90px;
+    height: 50px;
+    color: #551A8B;
+    transition: all 0.3s ease;
+}
+
+i.caret-down {
+    font-size: 20px !important;
+    margin-right: 5px !important;
+}
+
+.wrapper section nav ul li:nth-child(6) button {
+    background-color: transparent;
+    border: none;
+    outline: none;
+}
+
+.wrapper section nav ul li ul.user-drop-down-menu {
+    display: none;
+    width: 250px;
+    background-color: rgba(50, 50, 150, 0.2);
+    padding-top: 5px;
+    transition: all 0.3s ease;
+}
+
+.wrapper section nav ul li ul li {
+    display: block;
+    width: 100%;
+    height: 50px;
+    text-decoration: none;
+    list-style: none;
+    margin: 0 auto;
+}
+
+.wrapper section nav ul li:nth-child(6):hover i.icon {
+    background-color: #2d2eff;
+    color: whitesmoke;
+}
+
+.wrapper section nav ul li:nth-child(6):hover .user-drop-down-menu {
+    display: block;
 }
 
 /************************ end menu *****************************/
