--- a/css/customerMainPageCss.css
+++ b/css/customerMainPageCss.css
@@ -127,3 +127,72 @@ i.caret-down {
 }
 
 /************************ end menu *****************************/
+/************************ books *****************************/
+.wrapper section:nth-child(2) {
+    width: 100%;
+    min-height: 800px;
+    background: url("../images/BackgroundCover.jpg") center center no-repeat fixed;
+    background-size: cover;
+}
+
+/************************ newest *****************************/
+
+.wrapper section:nth-child(2) section:nth-child(1) {
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    background-color: transparent;
+    padding: 10px 0;
+    border: none;
+}
+
+.wrapper section:nth-child(2) section:nth-child(2) div {
+    display: inline-block;
+    width: 30%;
+    height: 380px;
+    background-color: rgba(255, 255, 255, 0.9);
+    margin: 10px 20px 10px 20px;
+    border: 2px solid #2d2eff;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.wrapper section:nth-child(2) section:nth-child(2) div img {
+    width: 170px;
+    height: 220px;
+    margin: 10px auto;
+}
+
+.wrapper section:nth-child(2) section:nth-child(2) div span:nth-child(3) {
+    display: block;
+    background-color: white;
+    width: auto;
+    height: 30px;
+    margin: 0 auto;
+}
+
+.wrapper section:nth-child(2) section:nth-child(2) div a {
+    display: inline-block;
+    width: 130px;
+    height: 35px;
+    text-decoration: none;
+    background-color: #2d2eff;
+    color: whitesmoke;
+    border-radius: 5px;
+    margin: 10px;
+    padding-top: 5px;
+    box-sizing: border-box;
+}
+
+.wrapper section:nth-child(2) section:nth-child(2) div span:nth-child(6) {
+    display: inline-block;
+    margin: 6px 10px;
+}
+
+.wrapper section:nth-child(2) section:nth-child(2) div span:nth-child(7) {
+    background-color: rgba(41, 170, 40, 0.98);
+    padding: 0px 5px;
+}
+
+/************************ end newest *****************************/
+/************************ end books *****************************/
