--- a/css/BookDetailSheet.css
+++ b/css/BookDetailSheet.css
@@ -1,10 +1,11 @@
 @import "reboot.css";
 
+/**************************** make menu ********************************/
 .wrapper section:nth-child(1) {
     background-color: rgba(50, 50, 150, 0.2);
     border-bottom: 2px solid black;
     width: 100%;
-    height: 50px;
+    height: 60px;
     direction: ltr;
 }
 
@@ -16,7 +17,7 @@
     border-radius: 5px;
     background-color: #2d2eff;
     color: whitesmoke;
-    margin-top: 5px;
+    margin-top: 10px;
     margin-left: 20px;
     padding-top: 7px;
     text-align: center;
@@ -33,3 +34,5 @@
 .wrapper section a:nth-child(1):active {
     background-color: rgb(0, 0, 180);
 }
+
+/**************************** end make menu ********************************/
