--- a/css/CostumerPackages.css
+++ b/css/CostumerPackages.css
@@ -1,9 +1,48 @@
 @import "reboot.css";
+
+/**************************** make menu ********************************/
+.wrapper section:nth-child(1) {
+    background-color: rgba(50, 50, 150, 0.2);
+    border-bottom: 2px solid black;
+    width: 100%;
+    height: 60px;
+    direction: ltr;
+}
+
+.wrapper section:nth-child(1) a {
+    display: inline-block;
+    width: 170px;
+    height: 40px;
+    text-decoration: none;
+    border-radius: 5px;
+    background-color: #2d2eff;
+    color: whitesmoke;
+    margin-top: 10px;
+    margin-left: 20px;
+    padding-top: 7px;
+    text-align: center;
+    box-sizing: border-box;
+    transition: width 0.3s ease;
+}
+
+.wrapper section:nth-child(1) a:hover {
+    width: 200px;
+    border: 2px solid black;
+    padding-top: 5px;
+}
+
+.wrapper section:nth-child(1) a:hover {
+    background-color: rgb(0, 0, 180);
+}
+
+/**************************** end make menu ********************************/
+
 section.packages {
     width: 100%;
-    background-color: rgba(242,242,242,0.4);
+    background-color: rgba(242, 242, 242, 0.4);
 
 }
+
 .packages > h1 {
     color: gray;
     margin-top: 50px;
@@ -12,24 +51,28 @@ section.packages {
     font-weight: bold;
 
 }
+
 .packages > hr {
     margin-top: 20px;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
 }
-.packages section.show{
+
+.packages section.show {
     width: inherit;
-    margin-top: 20px;!important;
+    margin-top: 20px;
+!important;
 }
-.packages section.show  section.info{
+
+.packages section.show section.info {
     display: inline-block;
     width: 40%;
     height: 50px;
     border-radius: 5px;
     box-sizing: border-box;
     border-color: black;
-    background-color: rgb(242,242,242);
+    background-color: rgb(242, 242, 242);
     border-style: solid;
     border-width: 1px;
     margin-right: 150px;
@@ -38,14 +81,15 @@ section.packages {
     line-height: 50px;
     padding-right: 5px;
 }
-.packages section.show  section.price{
+
+.packages section.show section.price {
     display: inline-block;
     width: 10%;
     height: 50px;
     border-radius: 5px;
     box-sizing: border-box;
     border-color: black;
-    background-color: rgb(242,242,242);
+    background-color: rgb(242, 242, 242);
     border-style: solid;
     border-width: 1px;
     margin-right: 40px;
@@ -54,7 +98,8 @@ section.packages {
     text-align: center;
 
 }
-.packages .show  a.after{
+
+.packages .show a.after {
     display: inline-block;
     width: 10%;
     height: 50px;
@@ -70,7 +115,8 @@ section.packages {
     color: black;
 
 }
-.packages .show  a.before{
+
+.packages .show a.before {
     display: inline-block;
     width: 10%;
     height: 50px;
@@ -85,7 +131,8 @@ section.packages {
     color: black;
 
 }
-.packages .show section.info:hover{
+
+.packages .show section.info:hover {
     display: inline-block;
     width: 40%;
     height: 50px;
@@ -101,7 +148,8 @@ section.packages {
     line-height: 50px;
     padding-right: 5px;
 }
-.packages .show section.info:hover+section.price{
+
+.packages .show section.info:hover + section.price {
     display: inline-block;
     width: 10%;
     height: 50px;
@@ -116,7 +164,8 @@ section.packages {
     line-height: 50px;
     text-align: center;
 }
-.packages .show section.price:hover{
+
+.packages .show section.price:hover {
     display: inline-block;
     width: 10%;
     height: 50px;
@@ -131,7 +180,8 @@ section.packages {
     line-height: 50px;
     text-align: center;
 }
-.packages .show section.price:hover + .packages .show section.info{
+
+.packages .show section.price:hover + .packages .show section.info {
     display: inline-block;
     width: 40%;
     height: 50px;
@@ -147,7 +197,8 @@ section.packages {
     line-height: 50px;
     padding-right: 5px;
 }
-.packages .show a.before:hover{
+
+.packages .show a.before:hover {
     display: inline-block;
     width: 10%;
     height: 50px;
@@ -163,7 +214,8 @@ section.packages {
     font-weight: bold;
 
 }
-.packages .show a.after:hover{
+
+.packages .show a.after:hover {
     display: inline-block;
     width: 10%;
     height: 50px;
