--- a/css/walletcharge.css
+++ b/css/walletcharge.css
@@ -1,4 +1,42 @@
 @import "reboot.css";
+
+/**************************** make menu ********************************/
+.wrapper section:nth-child(1) {
+    background-color: rgba(50, 50, 150, 0.2);
+    border-bottom: 2px solid black;
+    width: 100%;
+    height: 60px;
+    direction: ltr;
+}
+
+.wrapper section a:nth-child(1) {
+    display: inline-block;
+    width: 170px;
+    height: 40px;
+    text-decoration: none;
+    border-radius: 5px;
+    background-color: #2d2eff;
+    color: whitesmoke;
+    margin-top: 10px;
+    margin-left: 20px;
+    padding-top: 7px;
+    text-align: center;
+    box-sizing: border-box;
+    transition: width 0.3s ease;
+}
+
+.wrapper section a:nth-child(1):hover {
+    width: 200px;
+    border: 2px solid black;
+    padding-top: 5px;
+}
+
+.wrapper section a:nth-child(1):active {
+    background-color: rgb(0, 0, 180);
+}
+
+/**************************** end make menu ********************************/
+
 section.wallet{
     width: 100%;
     background-color: rgba(242,242,242,0.4);
