--- a/css/CostumerPackages.css
+++ b/css/CostumerPackages.css
@@ -78,6 +78,7 @@ section.packages {
     margin-bottom: 15px;
     line-height: 50px;
     padding-right: 5px;
+    transition: all 0.3s ease;
 }
 
 .packages section.show section.price {
@@ -94,7 +95,7 @@ section.packages {
     vertical-align: top;
     line-height: 50px;
     text-align: center;
-
+    transition: all 0.3s ease;
 }
 
 .packages .show a.after {
@@ -111,7 +112,7 @@ section.packages {
     line-height: 50px;
     vertical-align: top;
     color: black;
-
+    transition: all 0.3s ease;
 }
 
 .packages .show a.before {
@@ -127,106 +128,29 @@ section.packages {
     text-align: center;
     vertical-align: top;
     color: black;
-
+    transition: all 0.3s ease;
 }
 
 .packages .show section.info:hover {
-    display: inline-block;
-    width: 40%;
-    height: 50px;
-    border-radius: 5px;
-    box-sizing: border-box;
-    border-color: black;
     background-color: yellow;
-    border-style: solid;
-    border-width: 1px;
-    margin-right: 150px;
-    vertical-align: top;
-    margin-bottom: 15px;
-    line-height: 50px;
-    padding-right: 5px;
 }
 
 .packages .show section.info:hover + section.price {
-    display: inline-block;
-    width: 10%;
-    height: 50px;
-    border-radius: 5px;
-    box-sizing: border-box;
-    border-color: black;
     background-color: yellow;
-    border-style: solid;
-    border-width: 1px;
-    margin-right: 40px;
-    vertical-align: top;
-    line-height: 50px;
-    text-align: center;
 }
 
 .packages .show section.price:hover {
-    display: inline-block;
-    width: 10%;
-    height: 50px;
-    border-radius: 5px;
-    box-sizing: border-box;
-    border-color: black;
     background-color: yellow;
-    border-style: solid;
-    border-width: 1px;
-    margin-right: 40px;
-    vertical-align: top;
-    line-height: 50px;
-    text-align: center;
 }
 
-.packages .show section.price:hover + .packages .show section.info {
-    display: inline-block;
-    width: 40%;
-    height: 50px;
-    border-radius: 5px;
-    box-sizing: border-box;
-    border-color: black;
+.packages .show section.price:hover + section.info {
     background-color: yellow;
-    border-style: solid;
-    border-width: 1px;
-    margin-right: 150px;
-    vertical-align: top;
-    margin-bottom: 15px;
-    line-height: 50px;
-    padding-right: 5px;
 }
 
 .packages .show a.before:hover {
-    display: inline-block;
-    width: 10%;
-    height: 50px;
-    border-radius: 5px;
-    box-sizing: border-box;
     background-color: blue;
-    margin-right: 10px;
-    text-decoration: none;
-    line-height: 50px;
-    text-align: center;
-    vertical-align: top;
-    color: black;
-    font-weight: bold;
-
 }
 
 .packages .show a.after:hover {
-    display: inline-block;
-    width: 10%;
-    height: 50px;
-    border-radius: 5px;
-    box-sizing: border-box;
     background-color: green;
-    margin-right: 80px;
-    text-decoration: none;
-    padding: 1px;
-    text-align: center;
-    line-height: 50px;
-    vertical-align: top;
-    color: black;
-    font-weight: bold;
-
 }
